# personal-skills

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
plugins/personal-skills/: pyproject.toml
plugins/personal-skills/.claude-plugin/: plugin.json
plugins/personal-skills/commands/: pr-checkout.md  pr-monitor.md
plugins/personal-skills/config/: pr-monitor.sources.example.yaml
plugins/personal-skills/personal_skills/: __init__.py
plugins/personal-skills/personal_skills/common/: __init__.py  auth.py  cli_runner.py  errors.py  git.py  paths.py  remote.py  worktree_info.py
plugins/personal-skills/personal_skills/pr_checkout/: __main__.py  worktree.py
plugins/personal-skills/personal_skills/pr_monitor/: __main__.py  fetch.py
plugins/personal-skills/scripts/pr-checkout/: pr_worktree.sh  smoke_test.sh
plugins/personal-skills/scripts/pr-monitor/: fetch_prs.sh  smoke_test.sh
plugins/personal-skills/tests/: conftest.py  test_cli.py  test_command_docs.py  test_pr_checkout.py  test_pr_monitor_fetch.py  test_remote.py
plugins/personal-skills/tests/fixtures/: github_prs_raw.json  github_prs_ready.json  gitlab_mrs_raw.json  gitlab_mrs_ready.json
skills/npm-vuln-fix/: SKILL.md
